--- a/src/app/common/newcomp/newcomp.css
+++ b/src/app/common/newcomp/newcomp.css
@@ -10,8 +10,13 @@
 
 .display {
     border: 3px solid var(--light-colour );
-    padding: 32px 24px;
     font-size: 25px;
+}
+
+.size {
+  font-size: 2rem;
+  padding: 15px;
+  height: auto;
 }
 
 .btn {
